--- a/docker-compose.infrastructure.yml
+++ b/docker-compose.infrastructure.yml
@@ -9,25 +9,26 @@ services:
 
   mongodb:
     image: mongo
-
+  mongo-express:
+    image: mongo-express
   rabbitmq:
-    image: 'rabbitmq:3.8.9-management-alpine'
+    image: 'rabbitmq:3-management-alpine'
 
   redis:
     image: redis:alpine
 
   elasticsearch:
-    image: 'docker.elastic.co/elasticsearch/elasticsearch:7.9.3'
+    image: 'docker.elastic.co/elasticsearch/elasticsearch:7.10.1'
     volumes:
       - esdata:/usr/share/elasticsearch/data
 
   logstash:
-    image: 'docker.elastic.co/logstash/logstash:7.9.3'
+    image: 'docker.elastic.co/logstash/logstash:7.10.1'
     depends_on:
       - elasticsearch
 
   kibana:
-    image: 'docker.elastic.co/kibana/kibana:7.9.3'
+    image: 'docker.elastic.co/kibana/kibana:7.10.1'
     depends_on:
       - elasticsearch
         
