--- a/docker-compose.infrastructure.override.yml
+++ b/docker-compose.infrastructure.override.yml
@@ -17,14 +17,14 @@ services:
       - .env
     volumes:
       - ./mongodb/mongod.conf:/etc/mongod.conf
-      - ./home/mongodb:/home/mongodb2
+      - ./mongodb/home/mongodb:/home/mongodb
       - ./mongodb/initdb.d/:/docker-entrypoint-initdb.d/
-      # - ./mongodb/data/db/:/var/lib/mongodb/
+      # - ./mongodb/data/db/:/data/db
       # - ./mongodb/data/log/:/var/log/mongodb/
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+    # environment:
+      # MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      # MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      # MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
     ports:
       - "27017:27017"
     command: ["-f", "/etc/mongod.conf"]
