--- a/docker-compose.infrastructure.override.yml
+++ b/docker-compose.infrastructure.override.yml
@@ -19,12 +19,12 @@ services:
       - ./mongodb/mongod.conf:/etc/mongod.conf
       - ./mongodb/home/mongodb:/home/mongodb
       - ./mongodb/initdb.d/:/docker-entrypoint-initdb.d/
-      # - ./mongodb/data/db/:/data/db
-      # - ./mongodb/data/log/:/var/log/mongodb/
-    # environment:
-      # MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      # MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      # MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+      - ./mongodb/data/db/:/data/db
+      - ./mongodb/data/log/:/var/log/mongodb/
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
     ports:
       - "27017:27017"
     command: ["-f", "/etc/mongod.conf"]
@@ -61,8 +61,8 @@ services:
     restart: always
     volumes: 
       - ./rabbitmq/etc/:/etc/rabbitmq/
-      # - ./rabbitmq/data:/var/lib/rabbitmq/
-      # - ./rabbitmq/logs:/var/log/rabbitmq/log
+      - ./rabbitmq/data:/var/lib/rabbitmq/
+      - ./rabbitmq/logs:/var/log/rabbitmq/log
 
   redis:
     container_name: redis
