--- a/mongodb/mongod.conf
+++ b/mongodb/mongod.conf
@@ -16,6 +16,7 @@ storage:
 systemLog:
   destination: file
   logAppend: true
+  logRotate:rename
   path: /var/log/mongodb/mongod.log
 
 # network interfaces
