--- a/docker-compose.infrastructure.override.yml
+++ b/docker-compose.infrastructure.override.yml
@@ -49,8 +49,7 @@ services:
 
   rabbitmq:
     environment:
-      - TZ=Asia/Shanghai
-    environment:
+      TZ: Asia/Shanghai
       RABBITMQ_ERLANG_COOKIE: ${RABBITMQ_ERLANG_COOKIE}
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
